smokeping/02-deploy.yml
apiVersion: v1
kind: Namespace
metadata:
  name: smokeping
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: smokeping
  namespace: smokeping
spec:
  replicas: 1
  serviceName: smokeping
  selector:
    matchLabels:
      app: smokeping
  template:
    metadata:
      labels:
        app: smokeping
    spec:
      containers:
      - name: smokeping
        image: linuxserver/smokeping
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        volumeMounts:
        - name: smokeping-data
          mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: smokeping-data
      spec:
        accessModes: ["ReadWriteOnce"]
        volumeMode: Filesystem
        resources:
          requests:
            storage: 1Gi
