smokeping/03-service.yml
apiVersion: v1
kind: Service
metadata:
  name: smokeping
spec:
  selector:
    app: smokeping
  ports:
    - port: 80
      targetPort: 80
