smokeping/04-ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: smokeping
  namespace: smokeping
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`smokeping.tenbananas.win`)
      kind: Rule
      services:
        - name: smokeping
          port: 80
  tls:
    secretName: k8-tenbananas-win
